# Swedish-Housing-Affordability-Indicator

./: .gitignore  README.md  app.py  pyproject.toml
.claude/: settings.local.json
.cursor/plans/: fix_shai_dashboard_bugs_bfaf70a9.plan.md  kontantinsats_ux_polish_def05d1a.plan.md  shai_ux_improvements_5c1a7587.plan.md
.streamlit/: config.toml
data/geo/: kommuner.geojson
data/processed/: affordability_county.parquet  affordability_municipal.parquet  affordability_national.parquet  affordability_ranked.parquet  arima_metadata.parquet  forecast_arima.parquet  forecast_prophet.parquet  municipality_coords.csv  panel_county.parquet  panel_municipal.parquet  panel_national.parquet
docs/: APARTMENT_DATA_ANALYSIS_PLAN.md  AUDIT_methodology_assumptions.md  CHOROPLETH_MAP_REFERENCE.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  DEVIATIONS.md  METHODOLOGY.md  METHODOLOGY_v2.md  PATCH_POST_DAY2_v2.md  PLAYBOOK.md  PLAYBOOK_v2.md  PRD.md  PROMPTS_v2.md  UX_UI_GAP_ANALYSIS.md  patch_post_day2.md  prompts.md  translation_audit.md
pages/: 01_Riksoversikt.py  02_Lan_jamforelse.py  03_Kommun_djupanalys.py  04_Kontantinsats.py  05_Scenario.py  06_Metodologi.py
scripts/: diagnose_price_variable.py  gen_coords.py  generate_municipality_coords.py  math_check.py  refresh_data.py
src/data/: __init__.py  build_panel.py  kolada_client.py  riksbanken_client.py  scb_client.py
src/forecast/: __init__.py  arima_pipeline.py  prophet_pipeline.py
src/indices/: __init__.py  affordability.py  normalize.py  (+1 more)
tests/: test_real_rate.py  test_scb_bostadsratt_path.py  test_smoke.py  test_validation.py
(+9 files in other folders)
